--- a/cal.html
+++ b/cal.html
@@ -26,8 +26,10 @@
   <button class="num" data-num="0">0</button>
   <button class="num" data-num=".">.</button>
   <button data-ops="modulo" class="ops">%</button>
+  <button data-ops="power" class="ops">^</button>
   <button id="equals" class="equals" data-result="">=</button>
   
 </div>
 
 <button id="reset" class="reset">Reset</button>
+
