--- a/cal.html
+++ b/cal.html
@@ -1,5 +1,5 @@
 <h1>Online Simple Calculator</h1>
-<p class="warn">No Zero Division</p>
+<p class="warning">No Zero Division</p>
 
 <div id="calculator" class="calculator">
 
