--- a/cal.html
+++ b/cal.html
@@ -14,7 +14,7 @@
   <button class="num" data-num="4">4</button>
   <button class="num" data-num="5">5</button>
   <button class="num" data-num="6">6</button>
-  <button data-ops="multiplied by" class="ops">*</button>
+  <button data-ops="times" class="ops">*</button>
   <button data-ops="divided by" class="ops">/</button>
 
   <button class="num" data-num="1">1</button>
