--- a/cal.html
+++ b/cal.html
@@ -8,7 +8,7 @@
   <button class="num" data-num="7">7</button>
   <button class="num" data-num="8">8</button>
   <button class="num" data-num="9">9</button>
-  <button id="clear" class="clear">C</button>
+  <button id="clear_it" class="clear_it">C</button>
   <button id="clear_all" class="clear_all">AC</button>
 
   <button class="num" data-num="4">4</button>
